# SDL2Game

./: CMakeLists.txt  README.md
include/: sqlite3.h
include/SDL2/: SDL_gles2funcs.h  SDL_image.h  SDL_pixels.h  SDL_rwops.h  SDL_video.h
lib/win32/x64/: SDL2.lib  SDL2_mixer.lib  SDL2_ttf.lib  SDL2cxx.lib  SQLite3cxx.lib  sqlite3.lib
lib/win32/x86/: SDL2.lib  SDL2_mixer.lib  sqlite3.lib
src/: AnimatedGraphic.cpp  AnimatedGraphic.h  Config.h  Config.hc  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  LoaderParams.cpp  LoaderParams.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h  Vector2D.h  main.cpp
